Prevent menu item text from wraping

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -95,6 +95,7 @@ a.smalltitle {
 .ink-navigation ul.black li {
 	font-size: 12px;
 	border: 0px;
+	white-space: nowrap;
 }
 
 .topbar .ink-navigation ul.black li a,
